# ssddiff

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  NEWS  README.md  TODO  autogen.sh  configure.in
src/: Doxyfile  Makefile  Makefile.am  TODO  config.h  diff.cc  diff.h  doc.cc  doc.h  main.cc  node.cc  node.h  node_eqclass.cc  node_eqclass.h  out_common.cc  out_common.h  out_marked.cc  out_marked.h  out_merged.cc  out_merged.h  out_xupdate.cc  out_xupdate.h  rel_count.cc  rel_count.h  rel_eqclass.cc  rel_eqclass.h  ustring.cc  ustring.h  util.h
test/: Makefile.am  ops-attr1.xml  ops-attr2.xml  setup.sh  t0001-xml.sh  t0002-attr.sh
test/t0001/: operations1.xml  operations2.xml  result.xml
test/t0002/: ops-attr1.xml  result.xml
